Related fdo#74597: Java on Mac doesn't use javaldx/library path fiddling

...so no need to return non-empty SunInfo::getLibraryPaths (for the Oracle JRE,
cf. how this had always returned an empty set for the Apple JRE in
otherjre.cxx).

This fixes the bug that selecting the Oracle JRE in the Advanced options pane
didn't stick, because jfw_areEqualJavaInfo was called on a JavaInfo read back
from XML where nRequirements had been cleared (in CNodeJavaInfo::loadFromNode)
and a JavaInfo where non-empty SunInfo::getLibraryPaths ->
VendorBase::needsRestart() == true -> nRequirements == JFW_REQUIRE_NEEDRESTART,
so always returned false.

(There's multiple errors here.  It is questionable whether jfw_areEqualJavaInfo
should take nRequirements into account, at least when used from
SvxJavaOptionsPage.  And VendorBase::getLibraryPaths appears to be only used to
compute VendorBase::needsRestart, ignoring the actual path data.  But leave that
for future clean-up.)

Change-Id: I5f004434b1cb7e909a153c43c474a2317f24b0c1