jvmfwk/plugins/sunmajor/pluginlib/sunjre.cxx
@@ -76,18 +76,12 @@ char const* const* SunInfo::getRuntimePaths(int * size)
 
 char const* const* SunInfo::getLibraryPaths(int* size)
 {
-#if defined UNX
+#if defined UNX && !defined MACOSX
     static char const * ar[] = {
-#if defined MACOSX && defined X86_64
-        // Oracle Java 7, under /Library/Internet Plug-Ins/JavaAppletPlugin.plugin/Contents/Home
-        "/lib/server",
-        "/lib"
-#else
         "/lib/" JFW_PLUGIN_ARCH "/client",
         "/lib/" JFW_PLUGIN_ARCH "/server",
         "/lib/" JFW_PLUGIN_ARCH "/native_threads",
         "/lib/" JFW_PLUGIN_ARCH
-#endif
     };
     *size = SAL_N_ELEMENTS(ar);
     return ar;
